--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="inner">
             <form class="js-form">
             
-                <input class="js-input" type="text">
+                <input class="js-input" type="text" required>
                 
                 <button class="js-btn" type="submit">letter</button>
                 <button class="js-rec" type="button">record</button> 
